--- a/VRChat/05/1024205.html
+++ b/VRChat/05/1024205.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NgUxtvyPpaw+ucQRn/+71Vqu5TL4/B/omQK2CTd4zrw="></script>
+    "Wj3AxHEaPazzOhmmFgRD4cqIGcyFPC51pRxG267bBv8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３D小物】狐お面【fbx】","description":"狐のお面のモデルです！\nVRChat等でご利用ください！\n\n\n☆内容物\n・Read me\n・狐お面.fbx\n・テクスチャ\n\n☆ポリゴン数\nF:1016\nV:1114\n\n☆使用方法\n必ず\"Read me\"をお読みになったうえで、Unity上にfbxファイルを読み込みテクスチャを張り付けてVRChat等で自由にご利用ください","url":"https://booth.pm/ja/items/1024205","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/d492d173-6129-4b47-bdd6-765377efbfdb/i/1024205/faf689f0-d60b-4360-9ecc-9a3cf65359b9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NgUxtvyPpaw+ucQRn/+71Vqu5TL4/B/omQK2CTd4zrw="></script>
+    nonce="Wj3AxHEaPazzOhmmFgRD4cqIGcyFPC51pRxG267bBv8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024205/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024205/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
