--- a/VRChat/95/1023695.html
+++ b/VRChat/95/1023695.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tYdPgz47WV1o73maK00QP+TCBWZpan9lfcWMAkFk/tM="></script>
+    "B20zGlaikpfHb1js5DXOC1CGHKvsXzKZrdiY9eEf/X8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジャック・オー・ランタン　３Dモデル","description":"このカボチャは主にVRChatでワールドに置いたり、アバターに装着することを想定しています。\n\nポリゴン数は926です。\n\nカボチャの外側と内側部分のオブジェクトが分かれているので暗い所やブルームのかかっているシーンで光らせることができます。\n\n頭をカボチャに差し替えたり、ハロウィンの飾りつけなどに便利です。","url":"https://booth.pm/ja/items/1023695","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1023695/75302408-db43-4333-b63d-724ee93dff32_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tYdPgz47WV1o73maK00QP+TCBWZpan9lfcWMAkFk/tM="></script>
+    nonce="B20zGlaikpfHb1js5DXOC1CGHKvsXzKZrdiY9eEf/X8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1023695/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               154
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1023695/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               154
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
