--- a/VRChat/75/1023475.html
+++ b/VRChat/75/1023475.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gJwuk1LZcChZvIqHcc3bF34/NLVmnmoeLCsH7LiUw9I="></script>
+    "qrApgYs4CcDk8DMeghM7/mWqXoEBxVIinMR7M07UnSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ワールド用】3D和風窓セット【無料DLあり】","description":"VRchat向けに作成した和風な窓のセットです。VRchat以外にもご自由にお使いくださって大丈夫です。\n一応窓ではありますが障子として扉として使用しても大丈夫だと思います。\n\n【内容物】\n・Blender File\n格子窓(左右)\n格子窓(木細工付き)\n格子窓\n格子窓４枚組\n窓枠あり格子窓(木細工付き)\n窓枠あり格子窓４枚組\n地窓、高窓\n窓枠付き地窓、高窓\n\n・3D オブジェクト(FBX)\n格子窓(1枚)\n格子窓(2枚組)\n格子窓(木細工付き4枚組)\n格子窓4枚組\n窓枠\n窓枠あり格子窓(木細工付き)\n窓枠あり格子窓4枚組\n窓枠付き地窓、高窓\n地窓、高窓\n\nテキスト\nReadme\n\nファイル\n使用前に\n\n・PNG\n窓(取っ手)\n窓(和紙)\n窓(枠)\n\n\n","url":"https://booth.pm/ja/items/1023475","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/46562510-06c8-4894-b8da-23e5c97cfcf0/i/1023475/799f228a-5039-4352-93f4-e8e44b3505f1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gJwuk1LZcChZvIqHcc3bF34/NLVmnmoeLCsH7LiUw9I="></script>
+    nonce="qrApgYs4CcDk8DMeghM7/mWqXoEBxVIinMR7M07UnSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1023475/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              157
+                              158
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1023475/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              157
+                              158
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
