--- a/VRChat/73/1022473.html
+++ b/VRChat/73/1022473.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v5CNZyzFWngJTuKli4cF7OxEd00jKmXE2zxA/Fm2ESo="></script>
+    "cGIKiPHLmjXViXoGDiAqsT1dCmS1QlAYYbw7tqzGHB0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【アクセサリ】シンプルなぼうし【△198】","description":"帽子型ややローポリゴン3Dモデル「シンプルなぼうし」です。\nVRChat等の自作3Dモデルを使用可能なゲームでご利用いただけます。\n完全自作のゲーム等でご利用いただけます。\nバーチャルYouTuber等の配信者のアバター等にご利用いただけます。\n3Dモデルデータおよび画像データは自由に改変してご利用いただけます。\n\nダウンロードしたファイル「hat_simple.zip」には以下のデータが含まれます。\n・hat_simple.fbx\n　→3Dモデルデータです。ポリゴン数は△198です。\n・hat_simple_texture.png\n　→hat_simple.fbxのテクスチャとなる画像データです。\n・hat_simple_uv.png\n　→hat_simple.fbxのUV配置を示した画像データです。\n\nこのデータの内容を予告なく変更する場合があります。\nこのデータの配布を予告なく中止する場合があります。\nこのデータの再配布を禁止します。\nこのデータの再販売を禁止します。\n0hmoriは、このデータを使用して生じたいかなる損害等について、一切責任を負いません。","url":"https://booth.pm/ja/items/1022473","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8cb4421e-f2e1-45d8-add4-b0798304ddd9/i/1022473/3c2bee05-beac-483b-a13c-1d6d666b2898_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v5CNZyzFWngJTuKli4cF7OxEd00jKmXE2zxA/Fm2ESo="></script>
+    nonce="cGIKiPHLmjXViXoGDiAqsT1dCmS1QlAYYbw7tqzGHB0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1022473/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1022473/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
