--- a/VRChat/56/1023056.html
+++ b/VRChat/56/1023056.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "N/YphqUseekQaCxmDjq01PIYG8v8IwPMmWL+e9XN+GU="></script>
+    "3EszSw+xtyiZP9He718VOAsbCF9YognQcEO8DLVF5WM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ワールド用】3D畳セット(無料DL有)","description":"VRchat用に作成した畳のセットです。そのままUnityで使用でき…るはずです‼不具合ありましたら修正致します。\n和風のワールド作成時の床などにいかがでしょうか？\nAFKアバターなんかにもどうぞ。ご自由に。\n【内容物】\n・Blender File\n畳（一畳)\n畳（横二畳)\n畳（縦二畳）\n畳（四畳）\n畳（六畳）\n畳（八畳）\n畳（十畳）\n\n・3Dオブジェクト【FBX】\n畳（一畳)\n畳（横二畳)\n畳（縦二畳）\n畳（四畳）\n畳（六畳）\n畳（八畳）\n畳（十畳）\n\n・Read me\n\n・JPG\n畳の縁\nご使用の前に\n\n・PNG\n畳\n","url":"https://booth.pm/ja/items/1023056","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/46562510-06c8-4894-b8da-23e5c97cfcf0/i/1023056/70196809-7880-4f87-a6ea-6099b10b1b16_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N/YphqUseekQaCxmDjq01PIYG8v8IwPMmWL+e9XN+GU="></script>
+    nonce="3EszSw+xtyiZP9He718VOAsbCF9YognQcEO8DLVF5WM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1023056/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               238
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1023056/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               238
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
