--- a/VRChat/66/1022766.html
+++ b/VRChat/66/1022766.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uO03USM8YWCIIP74DQ59x1P2f6ub9C+ylGgg3Wai1lI="></script>
+    "IHjgZ4nazOpKTH1sUV2XitmHq+sDYrF05etBE2/8zz8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat向け]三色串団子　～unity教室教材～","description":"VRChat向け　三色串団子 紹介文\nVRChat向けに作成された三色串団子です。\nVRChat外での利用も可能です。\n全ての団子に別のマテリアルが割り当てられているので、unity上で簡単にそれぞれの色を変更できます。\n\n[ユニティちゃんでわかるVRchatのためのunity教室]で導入を詳細に説明しています。\n\n内容物\n３Dモデル（FBX）\nテクスチャ\nreadme\n\nポリゴン数\n3066\n\n導入方法\nアバターをすでに読み込んだunityのプロジェクトにunitypackageを読み込んだあと、本モデルをシーンに追加し、手のボーンに直接組み込んでください。\n串の先と一つ目の団子にシェイプキーが仕込んであるのでご自由にお使いください。\n利用規約\n・本データ、改変されたデータの著作権は制作者が所有します。\n・本データ、またはその一部を再配布することを禁止します。商用利用、改変は可能です。\n・本データまたはその一部が、購入者以外の手に渡る使用方法を禁止します。\n・利用規約は変更される可能性があります。\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n免責事項\n・いかなる場合においても、このモデルによって生じた責任を負いかねます。\n\nモデル制作者：Herokichi","url":"https://booth.pm/ja/items/1022766","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/31016ebe-ac0b-47f3-82d0-a79c7d105baa/i/1022766/7a7029a3-2bd7-4b7c-bc86-8b66a2e8c020_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uO03USM8YWCIIP74DQ59x1P2f6ub9C+ylGgg3Wai1lI="></script>
+    nonce="IHjgZ4nazOpKTH1sUV2XitmHq+sDYrF05etBE2/8zz8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1022766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1022766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
