--- a/VRChat/93/1021493.html
+++ b/VRChat/93/1021493.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OS6zMk6OF8TTM9s4RtrcFZvJ3QP4cdkO9w2N8c+8VT0="></script>
+    "fEbKmb1SUFPSAv0vPYgaZ8vis2/b34TtCQykZSRC82I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター用オリジナルモデル「シノア」[VRM対応]","description":"VRchat用オリジナルモデル「バトルメイド シノア 」BattleMaidSinar\n\n\nBattleMaidSinar期間限定セール！\nVKetに合わせ8月中半額、セットアップ済みVRC用assetです。\n\n■シノアとは？■\n現在作成中のゲーム内に出てくるバトルフィールドと学園の間で実験体や労働者が学園内に侵入できないように日夜格闘する改造猫人バトルメイドです。\n性格はおとなしく礼儀正しい、口数は少ないがおしゃべりは好き、いつもニコニコ罪人を裁くとっても良い子です。\n趣味はわりとガチ目な狩りゴッコ。\n好きなものは■■■■■■■■■■■■■（検閲済み）\n基本的に害はないが敵にと認識するとヤバイ\nだがkawaiiから問題ない\n\n\n■この服は？■\n防刃防弾性に優れた帝神社のヌーベルケプラ繊維で作られた戦闘用メイド服です。\n●特殊効果\nY染色体ヒューマノイドに対し常に30%＋の防御力。\n猫耳耐性50以下の生物に対し装甲及び防御系、確率防御系スキルを無視して絶命攻撃を発動可能。\nネズミ系生物に対し100%攻撃力アップ。\n●特殊機能\nBit及びブーツ内臓のプラズマスラスターにより３段ジャンプが可能。\n拳に指向性電撃を放てる端子を装備しており一回の充電で10回までのスタン攻撃が可能。\nリスト部分に充電用のUSB3.4DPポート搭載、非常時にスマホへの給電も可能。\nスカート部に四菱ケミカル製単分子ワイヤーが内蔵されており高速回転することでコンクリートも切断可能\n格闘戦時に掴み対策としてフリル、スカート、リボン等にはギレット社製ソフトレイザー（柔らかいカミソリ）が埋め込まれている。\nタイトブーツは完全防水かつヒートパイプが内蔵されており蒸れずに快適。\nファスナー部分はクアッドアイが搭載されていてカチューシャ型HUDに立体解析画像をおくるため前後方の視野死角が無い。\n●デメリット\n普段の生活では気を付けないと非戦闘時猫大好きにkawaii攻撃されると相手は死ぬ。\nVRChat内では全ての機能効果はOFFになる\n\n\n■心優しき坊主とは？■\n作者です。\nツイッターでこの作品も含めたローポリ講座を不定期で開いてます、ぜひフォローしてくださいね。\nhttps://twitter.com/KoKoRoBoUZu\n\n\n以下に各バージョンの説明がありますのでよく読んでからご購入お願いします。\n","url":"https://booth.pm/ja/items/1021493","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"5500"},"image":"https://booth.pximg.net/c/620x620/e3df372d-7b3e-4861-9106-df71df45ccc4/i/1021493/f1eed8a5-f520-4e97-8a1b-528a5ea34a86_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OS6zMk6OF8TTM9s4RtrcFZvJ3QP4cdkO9w2N8c+8VT0="></script>
+    nonce="fEbKmb1SUFPSAv0vPYgaZ8vis2/b34TtCQykZSRC82I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1021493/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               344
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1021493/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               344
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
